# object_slam

./: CMakeLists.txt  README.md
Examples/RGB-D/: CameraTrajectory.txt  CameraTrajectory_s.txt  develop.md  run.sh  run_desk.sh  run_dynamic.sh  run_semantic_slam.sh  semantic_slam  semantic_slam.cc  test_color_manager  test_color_manager.cc  test_ellipsoid  test_ellipsoid.cc  test_erase  test_erase.cc
include/: BoundingBox.h  BoundingBox3d.h  Distance.h  Ellipse.h  Ellipsoid.h  Frame.h  FrameDrawer.h  LocalObjectMapping.h  LoopClosing.h  Map.h  MapDrawer.h  Object.h  ObjectColorManager.h  ObjectDetect.h  ObjectOptimizer.h  System.h  Tracking.h  Utils.h
src/: BoundingBox3d.cc  Distance.cc  Ellipse.cc  Ellipsoid.cc  Frame.cc  FrameDrawer.cc  KeyFrameDatabase.cc  LocalObjectMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  Object.cc  ObjectDetect.cc  System.cc  Tracking.cc  Utils.cc  Viewer.cc
src_ros/: LoadImageNode.cc  detect.cpp  detectClient.cpp
src_ros/msg/: image_yolo.msg
src_ros/srv/: ImageDetect.srv
yolo/: detect.py  detect2.py  detectTest.py  output.txt  output_desk.txt  output_static.txt  segement.py
